<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/venice"
    android:padding="@dimen/size_large"
    tools:context=".activities.IndexActivity">

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/transparent_pw"/>

    <TextView
        android:id="@+id/username_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_dashboard"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:layout_below="@+id/txtHello"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/size_large"
        />

    <TextView
        android:id="@+id/chartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electric"
        android:textSize="@dimen/size_large"
        android:layout_marginBottom="@dimen/size_large"
        android:textStyle="italic"
        android:layout_below="@id/username_dashboard"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <com.anychart.anychart.AnyChartView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chartTitle"
        android:background="@drawable/info_env"
        android:layout_alignParentBottom="true">

    </com.anychart.anychart.AnyChartView>

</RelativeLayout>