<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="30dp"
    android:background="@drawable/color1"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_marginTop="50dp"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:hint="@string/username"
        android:layout_height="50dp"
        android:layout_above="@id/txtPassword"
        android:background="@drawable/input"
        android:textColorHint="@color/transparent_pw"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/btnLogin"
        android:background="@drawable/input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/transparent_pw"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/btnForgotPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Login"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:background="@drawable/input"/>

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/forgot_password"
        android:background="@android:color/transparent"
        android:textColor="@color/transparent_pw"/>
    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:text="@string/signup"
        android:background="@android:color/transparent"
        android:textColor="@color/transparent_pw"/>

</RelativeLayout>